Add investment portfolio cost columns
